<resources>
    <string name="app_name">MadTest02</string>
    <string name="bt_simple_recyclerview">SIMPLE RECYCLER VIEW</string>
    <string name="bt_sorting">SORTING</string>
    <string name="bt_sorting_off">OFF</string>
    <string name="bt_sort_by_length">1&lt;2&lt;3</string>
    <string name="bt_sort_by_order">a&gt;b&gt;c</string>
    <string name="bt_filtering">FILTERING</string>
    <string name="bt_recyclerview_with_headers">RECYCLERVIEW WITH HEADERS</string>
    <string name="bt_mutable_recyclerview">MUTABLE RECYCLERVIEW</string>
    <string name="bt_rx_recyclerview">RX RECYCLER VIEW</string>
    <string name="bt_generic">GENERIC ADAPTER</string>
    <string name="bt_classic_recyclerview">CLASSIC RECYCLER VIEW</string>
    <string name="bt_headers">HEADERS</string>
    <string name="bt_infinite">INFINITE SCROLLING</string>
    <string name="title_simple_recyclerview_usages_examples">Simple Recycler View Usages Examples</string>
    <string name="title_simple_recyclerview">Simple Recycler View</string>
    <string name="title_recyclerview_with_headers">Recycler View With Headers</string>
    <string name="title_mutable_recycler_view">Mutable Recycler View</string>
    <string name="title_classic_recyclerview_usages_examples">Classic Recycler View Usages Examples</string>
    <string name="title_filtered_recyclerview_example">Filtered Recycler View Example</string>
    <string name="title_sorted_recyclerview_example">Sorted Recycler View Example</string>
    <string name="title_infinite_recyclerview_example">Infinite Recycler View Example</string>
    <string name="title_rx_recyclerview_usages_examples">Rx Recycler View Usages Examples</string>
    <string name="title_rx_filtered_recyclerview_example">Rx Filtered Recycler View Example</string>
    <string name="title_rx_sorted_recyclerview_example">Rx Sorted Recycler View Example</string>
    <string name="default_item_view_text">Default item view text</string>
    <string name="filter_by">Filter by…</string>
    <string name="enter_command">Enter command...</string>
    <string name="mutable_recyclerview_instructions">Use the following commands to mutate recyclerView data:
    \'a text\', \'i text 2\', \'r text 2\', \'m 2 3\', \'d 2\'</string>
    <array name="lorem_ipsum">
        <item>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
            ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
            laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
            voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
            non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</item>
        <item>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
            laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto
            beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut
            odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
            Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit,
            sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat
            voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit
            laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit
            qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum
            fugiat quo voluptas nulla pariatur?</item>
        <item>But I must explain to you how all this mistaken idea of denouncing pleasure and praising
            pain was born and I will give you a complete account of the system, and expound the actual
            teachings of the great explorer of the truth, the master-builder of human happiness. No one
            rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who
            do not know how to pursue pleasure rationally encounter consequences that are extremely
            painful. Nor again is there anyone who loves or pursues or desires to obtain pain of
            itself, because it is pain, but because occasionally circumstances occur in which toil and
            pain can procure him some great pleasure. To take a trivial example, which of us ever
            undertakes laborious physical exercise, except to obtain some advantage from it? But who
            has any right to find fault with a man who chooses to enjoy a pleasure that has no annoying
            consequences, or one who avoids a pain that produces no resultant pleasure?</item>
        <item>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium
            voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati
            cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id
            est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam
            libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod
            maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus.
            Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet
            ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur
            a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis
            doloribus asperiores repellat.</item>
        <item>On the other hand, we denounce with righteous indignation and dislike men who are so beguiled
            and demoralized by the charms of pleasure of the moment, so blinded by desire, that they cannot
            foresee the pain and trouble that are bound to ensue; and equal blame belongs to those who fail
            in their duty through weakness of will, which is the same as saying through shrinking from toil
            and pain. These cases are perfectly simple and easy to distinguish. In a free hour, when our
            power of choice is untrammelled and when nothing prevents our being able to do what we like
            best, every pleasure is to be welcomed and every pain avoided. But in certain circumstances and
            owing to the claims of duty or the obligations of business it will frequently occur that
            pleasures have to be repudiated and annoyances accepted. The wise man therefore always holds in
            these matters to this principle of selection: he rejects pleasures to secure other greater
            pleasures, or else he endures pains to avoid worse pains.</item>
    </array>

    <!--<array name="lorem_ipsum">-->
        <!--<item>1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20</item>-->
        <!--<item>1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20</item>-->
        <!--<item>1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20</item>-->
        <!--<item>1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20</item>-->
        <!--<item>1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20</item>-->
    <!--</array>-->

    <!--<array name="lorem_ipsum">-->
        <!--<item>1 2 3 4 5</item>-->
        <!--<item>1 2 3 4 5</item>-->
        <!--<item>1 2 3 4 5</item>-->
        <!--<item>1 2 3 4 5</item>-->
        <!--<item>1 2 3 4 5</item>-->
    <!--</array>-->

    <!--<array name="lorem_ipsum">-->
        <!--<item>1 1</item>-->
        <!--<item>2 2</item>-->
        <!--<item>3 3</item>-->
        <!--<item>4 4</item>-->
        <!--<item>5 5</item>-->
        <!--<item>6 6</item>-->
        <!--<item>7 7</item>-->
    <!--</array>-->
</resources>
