<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.daxh.explore.madtest02.activities.MainActivity">

    <Button
        android:id="@+id/btFiltering"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_filtering"/>

    <Button
        android:id="@+id/btHeaders"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_headers"/>

    <Button
        android:id="@+id/btGeneric"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_generic"/>

</LinearLayout>
