<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <Button
        android:id="@+id/btSortingOff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/card_inner_offset_v"
        android:layout_marginBottom="@dimen/card_inner_offset_v"
        android:layout_marginLeft="@dimen/card_inner_offset_v"
        android:layout_marginStart="@dimen/card_inner_offset_v"
        android:text="@string/bt_sorting_off"/>

    <Button
        android:id="@+id/btSortByLength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/card_inner_offset_v"
        android:layout_marginBottom="@dimen/card_inner_offset_v"
        android:text="@string/bt_sort_by_length"/>

    <Button
        android:id="@+id/btSortByOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/card_inner_offset_v"
        android:layout_marginBottom="@dimen/card_inner_offset_v"
        android:layout_marginRight="@dimen/card_inner_offset_v"
        android:layout_marginEnd="@dimen/card_inner_offset_v"
        android:text="@string/bt_sort_by_order"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvItems"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/btSortingOff"
        android:scrollbars="vertical"/>

</RelativeLayout>
